2010-01-18  Roland Schwingel  <roland.schwingel@onevision.com>

	* include/winternl.h (NtQueryInformationFile): Declare
	function.
	(NTQueryObject): Likewise.
	(FILE_INFORMATION_CLASS): Filled with all known definitions.
	(FILE_ALL_INFORMATION): Define struct.
	(FILE_PIPE_LOCAL_INFORMATION): Likewise.
	(FILE_MAILSLOT_SET_INFORMATION): Likewise.
	(FILE_MAILSLOT_QUERY_INFORMATION): Likewise.
	(FILE_ATTRIBUTE_TAG_INFORMATION): Likewise.
	(FILE_STREAM_INFORMATION): Likewise.
	(FILE_MODE_INFORMATION): Likewise.
	(FILE_FULL_EA_INFORMATION): Likewise.
	(FILE_END_OF_FILE_INFORMATION): Likewise.
	(FILE_ALLOCATION_INFORMATION): Likewise.
	(FILE_ALIGNMENT_INFORMATION): Likewise.
	(FILE_POSITION_INFORMATION): Likewise.
	(FILE_DISPOSITION_INFORMATION): Likewise.
	(FILE_NAMES_INFORMATION): Likewise.
	(FILE_RENAME_INFORMATION): Likewise.
	(FILE_NAME_INFORMATION): Likewise.
	(FILE_POSITION_INFORMATION): Likewise.
	(FILE_ACCESS_INFORMATION): Likewise.
	(FILE_EA_INFORMATION): Likewise.
	(FILE_INTERNAL_INFORMATION): Likewise.
	(FILE_ACCESS_INFORMATION): Likewise.
	(FILE_STANDARD_INFORMATION): Likewise.
	(FILE_BASIC_INFORMATION): Likewise.
	(FILE_ID_BOTH_DIRECTORY_INFORMATION): Likewise.
	(FILE_BOTH_DIRECTORY_INFORMATION): Likewise.
	(FILE_ID_FULL_DIRECTORY_INFORMATION): Likewise.
	(FILE_FULL_DIRECTORY_INFORMATION): Likewise.
	(FILE_NETWORK_OPEN_INFORMATION): Likewise.
	(FILE_DIRECTORY_INFORMATION): Likewise.
	(OBJECT_DATA_INFORMATION): Likewise.
	(OBJECT_BASIC_INFORMATION): Likewise.
	(OBJECT_NAME_INFORMATION): Likewise.
	(OBJECT_TYPE_INFORMATION): Likewise.
	(OBJECT_ALL_INFORMATION): Likewise.
	(OBJECT_INFORMATION_CLASS): Define enum.
	(OBJECT_ATTRIBUTES): Reformat.

2010-01-15  Kai Tietz  <kai.tietz@onevision.com>
        Ozkan Sezer  <sezeroz@gmail.com>

	* include/: Change DISCLAIMER to DISCLAIMER.PD.
	* crt/: Change DISCLAIMER to DISCLAIMER.PD.

2010-01-15  Philippe Dunski  <koala01@free.fr>

	* crt/stdlib.h (rand_s): New prototype.
