@@ -39,7 +39,7 @@ sechead_HEADERS = \
   crt/sec_api/stdio_s.h  crt/sec_api/stdlib_s.h  crt/sec_api/stralign_s.h  crt/sec_api/string_s.h    crt/sec_api/tchar_s.h  \
   crt/sec_api/time_s.h   crt/sec_api/wchar_s.h
 secsyshead_HEADERS = crt/sec_api/sys/timeb_s.h
-sdkshead_HEADERS = crt/sdks/_mingw_directx.h
+sdkshead_HEADERS = crt/sdks/_mingw_directx.h crt/sdks/_mingw_ddk.h
 else
 basehead_HEADERS = 
 syshead_HEADERS = 
