@@ -1,3 +1,12 @@
+2010-01-23  Jonathan Yong  <jon_y@users.sourceforge.net>
+	* Makefile.am: Add _mingw_ddk.h install rule.
+	* ddk/include/sdks/_mingw_ddk.h: Removed.
+	* crt/sdks/_mingw_ddk.h.in: New.
+	* defaults/generate.sh: Add defaults for _mingw_ddk.h.
+	* defaults/include/sdks/_mingw_ddk.h: New.
+	* Makefile.in: Regenerated.
+	* configure: Regenerated.
+
 2010-01-18  Roland Schwingel  <roland.schwingel@onevision.com>
 
 	* include/winternl.h (NtQueryInformationFile): Declare
